--- a/pages/page6/index.html
+++ b/pages/page6/index.html
@@ -24,36 +24,32 @@
     </header>
     <main class="content container">
         <div class="card-gallery">
-            <div class="card-item">
+            <div class="card-item xiao">
                 <div class="card-static">
                     <h1>Xiao</h1>
                     <img src="../page1/assets/img/Xiao.jpg" alt="Card 1">
                     <hr>
                     <p>The Vigilant Yaksha</p>
                     <hr>
-
-                    <p>Xiao is a fierce and dedicated warrior from the game Genshin Impact. As the last remaining Yaksha, he defends Liyue from ancient evils, wielding his polearm with unmatched skill. Known for his solitary nature, Xiao's duty often takes him away from the company of others.
-                    </div>
+                    <p>Xiao is a fierce and dedicated warrior from the game Genshin Impact. As the last remaining Yaksha, he defends Liyue from ancient evils, wielding his polearm with unmatched skill. Known for his solitary nature, Xiao's duty often takes him away from the company of others.</p>
+                </div>
                 <div class="card-animated">
                     <h1>Xiao</h1>
                     <img src="../page1/assets/img/Xiao.jpg" alt="Card 1 Action">
                     <hr>
                     <p>The Vigilant Yaksha</p>
                     <hr>
-
-                    <p>Xiao is a fierce and dedicated warrior from the game Genshin Impact. As the last remaining Yaksha, he defends Liyue from ancient evils, wielding his polearm with unmatched skill. Known for his solitary nature, Xiao's duty often takes him away from the company of others.
+                    <p>Xiao is a fierce and dedicated warrior from the game Genshin Impact. As the last remaining Yaksha, he defends Liyue from ancient evils, wielding his polearm with unmatched skill. Known for his solitary nature, Xiao's duty often takes him away from the company of others.</p>
                 </div>
             </div>
-            <div class="card-item">
+            <div class="card-item nahida">
                 <div class="card-static">
                     <h1>Nahida</h1>
                     <img src="../page2/assets/img/Nahida.jpg" alt="Card 2">
                     <hr>
                     <p>Purity of Physic</p>
                     <hr>
-
                     <p>Nahida, also known as the Lesser Lord Kusanali, is a gentle and wise figure in the world of Genshin Impact. She serves as the current Dendro Archon, bringing wisdom and guidance to her followers. Despite her youthful appearance, Nahida possesses immense knowledge and power.</p>
-
                 </div>
                 <div class="card-animated">
                     <h1>Nahida</h1>
@@ -61,77 +57,63 @@
                     <hr>
                     <p>Purity of Physic</p>
                     <hr>
-
                     <p>Nahida, also known as the Lesser Lord Kusanali, is a gentle and wise figure in the world of Genshin Impact. She serves as the current Dendro Archon, bringing wisdom and guidance to her followers. Despite her youthful appearance, Nahida possesses immense knowledge and power.</p>
-
                 </div>
             </div>
-            <div class="card-item">
+            <div class="card-item mordekaiser">
                 <div class="card-static">
                     <h1>Mordekaiser</h1>
-                    <img src="../page3/assets/img/Mordekaiser.png" alt="Card 2">
+                    <img src="../page3/assets/img/Mordekaiser.png" alt="Card 3">
                     <hr>
                     <p>The Iron Revenant</p>
                     <hr>
-
-                    <p>Mordekaiser is a formidable and malevolent figure in the game League of Legends. Once a brutal warlord, he now commands the dead as the Iron Revenant. Clad in dark, enchanted armor, Mordekaiser seeks to conquer and enslave the souls of the living and the dead alike.
-
+                    <p>Mordekaiser is a formidable and malevolent figure in the game League of Legends. Once a brutal warlord, he now commands the dead as the Iron Revenant. Clad in dark, enchanted armor, Mordekaiser seeks to conquer and enslave the souls of the living and the dead alike.</p>
                 </div>
                 <div class="card-animated">
                     <h1>Mordekaiser</h1>
-                    <img src="../page3/assets/img/Mordekaiser.png" alt="Card 2 Action">
+                    <img src="../page3/assets/img/Mordekaiser.png" alt="Card 3 Action">
                     <hr>
                     <p>The Iron Revenant</p>
                     <hr>
-
-                    <p>Mordekaiser is a formidable and malevolent figure in the game League of Legends. Once a brutal warlord, he now commands the dead as the Iron Revenant. Clad in dark, enchanted armor, Mordekaiser seeks to conquer and enslave the souls of the living and the dead alike.
-
+                    <p>Mordekaiser is a formidable and malevolent figure in the game League of Legends. Once a brutal warlord, he now commands the dead as the Iron Revenant. Clad in dark, enchanted armor, Mordekaiser seeks to conquer and enslave the souls of the living and the dead alike.</p>
                 </div>
             </div>
-            <div class="card-item">
+            <div class="card-item bulbasaur">
                 <div class="card-static">
                     <h1>Bulbasaur</h1>
-                    <img src="../page4/assets/img/Bulbasaur IMG.jpg" alt="Card 2">
+                    <img src="../page4/assets/img/Bulbasaur IMG.jpg" alt="Card 4">
                     <hr>
                     <p>The Seed Pokemon</p>
                     <hr>
-
-                    <p>Bulbasaur is one of the most beloved starter Pokémon in the Pokémon series. This Grass/Poison-type Pokémon is known for the plant bulb on its back, which grows into a large flower as it evolves. Bulbasaur is friendly and loyal, making it a favorite among trainers.
-
+                    <p>Bulbasaur is one of the most beloved starter Pokémon in the Pokémon series. This Grass/Poison-type Pokémon is known for the plant bulb on its back, which grows into a large flower as it evolves. Bulbasaur is friendly and loyal, making it a favorite among trainers.</p>
                 </div>
                 <div class="card-animated">
                     <h1>Bulbasaur</h1>
-                    <img src="../page4/assets/img/Bulbasaur IMG.jpg" alt="Card 2 Action">
+                    <img src="../page4/assets/img/Bulbasaur IMG.jpg" alt="Card 4 Action">
                     <hr>
                     <p>The Seed Pokemon</p>
                     <hr>
-
-                    <p>Bulbasaur is one of the most beloved starter Pokémon in the Pokémon series. This Grass/Poison-type Pokémon is known for the plant bulb on its back, which grows into a large flower as it evolves. Bulbasaur is friendly and loyal, making it a favorite among trainers.
-
+                    <p>Bulbasaur is one of the most beloved starter Pokémon in the Pokémon series. This Grass/Poison-type Pokémon is known for the plant bulb on its back, which grows into a large flower as it evolves. Bulbasaur is friendly and loyal, making it a favorite among trainers.</p>
                 </div>
             </div>
-            <div class="card-item">
+            <div class="card-item rayquaza">
                 <div class="card-static">
                     <h1>Rayquaza</h1>
-                    <img src="../page5/assets/img/Rayquaza.jpg" alt="Card 2">
+                    <img src="../page5/assets/img/Rayquaza.jpg" alt="Card 5">
                     <hr>
                     <p>The Sky Pokemon</p>
                     <hr>
-                    <p>Rayquaza is a legendary Dragon/Flying-type Pokémon from the Pokémon series. Dwelling in the ozone layer, Rayquaza is known for its ability to calm the raging conflicts between Kyogre and Groudon. Its majestic appearance and incredible power make it a revered figure in the Pokémon world.
-
+                    <p>Rayquaza is a legendary Dragon/Flying-type Pokémon from the Pokémon series. Dwelling in the ozone layer, Rayquaza is known for its ability to calm the raging conflicts between Kyogre and Groudon. Its majestic appearance and incredible power make it a revered figure in the Pokémon world.</p>
                 </div>
                 <div class="card-animated">
                     <h1>Rayquaza</h1>
-                    <img src="../page5/assets/img/Rayquaza.jpg" alt="Card 2 Action">
+                    <img src="../page5/assets/img/Rayquaza.jpg" alt="Card 5 Action">
                     <hr>
                     <p>The Sky Pokemon</p>
                     <hr>
-
-                    <p>Rayquaza is a legendary Dragon/Flying-type Pokémon from the Pokémon series. Dwelling in the ozone layer, Rayquaza is known for its ability to calm the raging conflicts between Kyogre and Groudon. Its majestic appearance and incredible power make it a revered figure in the Pokémon world.
-
+                    <p>Rayquaza is a legendary Dragon/Flying-type Pokémon from the Pokémon series. Dwelling in the ozone layer, Rayquaza is known for its ability to calm the raging conflicts between Kyogre and Groudon. Its majestic appearance and incredible power make it a revered figure in the Pokémon world.</p>
                 </div>
             </div>
-            <!-- Repeat for 10 cards -->
         </div>
     </main>
     <footer class="footer">
